--- a/Sentinel/app/src/main/AndroidManifest.xml
+++ b/Sentinel/app/src/main/AndroidManifest.xml
@@ -15,8 +15,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-
-        <activity android:name=".activity.ScanActivity"
+        <activity android:name=".activity.TestActivity">
+        </activity>
+        <activity
+                android:name=".activity.ScanActivity"
                 android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -24,9 +26,9 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-        <activity android:name=".activity.MainActivity"
-                  android:screenOrientation="portrait"/>
+        <activity
+                android:name=".activity.MainActivity"
+                android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
