--- a/Sentinel/app/src/main/AndroidManifest.xml
+++ b/Sentinel/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".activity.ManualActivity">
+        <activity android:name=".activity.ManualActivity"
+                android:screenOrientation="portrait">
         </activity>
-        <activity android:name=".activity.TestActivity">
+        <activity android:name=".activity.TestActivity"
+                  android:screenOrientation="portrait">
         </activity>
         <activity
                 android:name=".activity.ScanActivity"
